--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>hello github!</h1>
+    <img src="pngwing.com.png" alt="" />
+    <h2>Today I studied such console commands:</h2>
+<center>    <div class="img1">
+    ·cd <br />
+    ·dir <br />
+    ·mkdir <br />
+    ·rmdir <br />
+    ·color <br />
+    ·cls</center>
+    </div>
+    <h2>And such git console commands:</h2>
+    <center>
+      <div class="img1">
+        ·git add <br />
+        ·git commit <br />
+        ·git push
+      </div>
+    </center>
   </body>
 </html>
